# phonopaper-rs

./: AGENTS.md  Cargo.toml  PHONOPAPER_SPEC.md  README.md
.github/workflows/: ci.yml  coverage.yml
phonopaper-cli/: Cargo.toml
phonopaper-cli/src/: main.rs
phonopaper-cli/src/cmd/: blank.rs  decode.rs  encode.rs  mod.rs  robust_decode.rs
phonopaper-rs/: Cargo.toml
phonopaper-rs/benches/: decode.rs  decode_iai.rs  encode.rs  encode_iai.rs
phonopaper-rs/examples/: angine.rs  bench_decode.rs  compare_android.rs  gen_sines.rs  robust_decode.rs
phonopaper-rs/src/: audio.rs  encode.rs  error.rs  format.rs  lib.rs  render.rs  spectrogram.rs  vector.rs
phonopaper-rs/src/decode/: image.rs  markers.rs  mod.rs  synth.rs  wav.rs
phonopaper-rs/tests/: audio.rs  decode.rs  encode.rs  format.rs  markers.rs  render.rs  roundtrip.rs  spectrogram.rs  vector.rs  wav.rs
phonopaper-rs/tests/helpers/: mod.rs
