[workspace]
members = ["phonopaper-rs", "phonopaper-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
license = "Apache-2.0 OR MIT"
repository = "https://git.sr.ht/~rfc1149/phonopaper-rs"

[workspace.lints.clippy]
pedantic = "warn"
